overflow of notes fixed with cleaning up code

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -34,6 +34,7 @@
 .login_box button:hover {
   background: #3b7dd8;
   color: #ededed;
+  cursor: pointer;
 }
 
 .login_register_main {
